Create filter skeleton

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,110 @@
-<p>dashboard works!</p>
+<div class="dashboard-wrapper">
+  <div class="row mb-5">
+    <div class="col-12">
+      <div class="toolbar-wrapper">
+        <div class="breadcrumbs-wrapper">
+          <p-breadcrumb [model]="breadcrumbItems">
+            <ng-template pTemplate="item" let-item>
+              <ng-container *ngIf="item.route; else elseBlock">
+                <a [routerLink]="item.route" class="p-menuitem-link">
+                  <span [ngClass]="[item.icon ? item.icon : '']"></span>
+                  <span class="font-semibold">{{ item.label }}</span>
+                </a>
+              </ng-container>
+              <ng-template #elseBlock>
+                <a [href]="item.url">
+                  <span>{{ item.label }}</span>
+                </a>
+              </ng-template>
+            </ng-template>
+          </p-breadcrumb>
+        </div>
+        <div class="search-wrapper">
+          <p-iconField iconPosition="left">
+            <p-inputIcon styleClass="pi pi-search" />
+            <input type="text" pInputText placeholder="Search" />
+        </p-iconField>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-4 col-lg-3">
+      <div class="filter-wrapper">
+        <h3>
+          Filter
+        </h3>
+        <p-accordion>
+          <p-accordionTab>
+            <ng-template pTemplate="header">
+              <i class="pi pi-folder ms-1 me-2"></i> Documents
+            </ng-template>
+            <p-accordion>
+              <p-accordionTab>
+                <ng-template pTemplate="header">
+                  <i class="pi pi-file ms-1 me-2"></i> Work
+                </ng-template>
+                <div *ngFor="let option of filterOptions">
+                  <p-checkbox
+                    name="category"
+                    value="{{option.value}}"
+                    [(ngModel)]="selectedOptions"
+                    inputId="{{option.value}}"></p-checkbox>
+                  <label for="{{option.value}}">{{option.label}}</label>
+                </div>
+              </p-accordionTab>
+              <p-accordionTab>
+                <ng-template pTemplate="header">
+                  <i class="pi pi-file ms-1 me-2"></i> Home
+                </ng-template>
+                Content of Home
+              </p-accordionTab>
+            </p-accordion>
+          </p-accordionTab>
+
+          <p-accordionTab>
+            <ng-template pTemplate="header">
+              <i class="pi pi-image ms-1 me-2"></i> Pictures
+            </ng-template>
+            <p-accordion>
+              <p-accordionTab>
+                <ng-template pTemplate="header">
+                  <i class="pi pi-camera ms-1 me-2"></i> Vacation
+                </ng-template>
+                Content of Vacation
+              </p-accordionTab>
+            </p-accordion>
+            <p-accordion>
+              <p-accordionTab>
+                <ng-template pTemplate="header">
+                  <i class="pi pi-camera ms-1 me-2"></i> Vacation
+                </ng-template>
+                Content of Vacation
+              </p-accordionTab>
+            </p-accordion>
+          </p-accordionTab>
+        </p-accordion>
+
+
+      </div>
+    </div>
+    <div class="col-12 col-md-8 col-lg-9">
+      <div class="row">
+        <div class="col-12">
+          <div class="inventory-header-wrapper">
+            <h2>
+              Inventory Gallery
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="inventory-gallery-wrapper">
+            Inventory list
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
