--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -61,7 +61,6 @@
               </p-accordionTab>
             </p-accordion>
           </p-accordionTab>
-
           <p-accordionTab>
             <ng-template pTemplate="header">
               <i class="pi pi-image ms-1 me-2"></i> Pictures
@@ -84,15 +83,13 @@
             </p-accordion>
           </p-accordionTab>
         </p-accordion>
-
-
       </div>
     </div>
     <div class="col-12 col-md-8 col-lg-9">
       <div class="row">
         <div class="col-12">
           <div class="inventory-header-wrapper">
-            <h2>
+            <h2 class="mb-4">
               Inventory Gallery
             </h2>
           </div>
@@ -100,8 +97,23 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <div class="inventory-gallery-wrapper">
-            Inventory list
+          <div class="row inventory-gallery-wrapper">
+            <div class="col-12 col-md-6 col-lg-4 inventory-card" *ngFor="let item of inventoryList">
+              <p-card header="{{item.name}}" subheader="{{item.category}}">
+                <ng-template pTemplate="header">
+                  <img alt="Card" src="{{item.image}}" />
+                </ng-template>
+                <p class="mb-0">
+                  {{item.description}}
+                </p>
+                <ng-template pTemplate="footer">
+                  <div class="d-flex gap-3">
+                    <p-button label="More details" severity="info" />
+                    <p-button label="Modify" severity="contrast" />
+                  </div>
+                </ng-template>
+              </p-card>
+            </div>
           </div>
         </div>
       </div>
