--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -32,6 +32,20 @@
   }
 }
 
+.item-description{
+  position: relative;
+  padding-bottom: 1rem;
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px; /* Maximum height of the border */
+    background: linear-gradient(to right, var(--primary-color) 0%, var(--text-color) 50%, var(--primary-color) 100%);
+  }
+}
+
 
 ::ng-deep{
   .p-breadcrumb {
@@ -83,6 +97,13 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    p{
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
   }
   .p-card-body{
     flex-grow: 1;
@@ -91,5 +112,49 @@
   }
   .p-card-footer{
     margin-top: auto;
+  }
+  .p-button{
+    padding: 0.25rem 0.75rem;
+    font-size: 0.8rem;
+  }
+  .p-dialog{
+    width: clamp(75%, 25rem, 60%);
+  }
+  .p-datatable-table{
+    // td{
+    //   border: 1px solid rgba(255, 255, 255, 0.05);
+    // }
+    th{
+      padding: 1rem;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+      color: var(--cyan-300);
+      div{
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+
+  .p-datatable-table{
+    width: 100%;
+  }
+
+  .p-tabmenu-nav{
+    padding-left: 0;
+  }
+
+  .p-highlight{
+    > a{
+      color: var(--primary-color);
+    }
+  }
+
+  .p-menuitem-link{
+    color: #a1a1aa;
+    text-decoration: none;
+  }
+
+  .p-component-overlay{
+    background-color: rgba(0, 0, 0, 0.7);
   }
 }
